--- a/.env
+++ b/.env
@@ -21,12 +21,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=u839269382_integrace
-DB_USERNAME=u839269382_integrace
-DB_PASSWORD=PwdGtech@12
+DB_CONNECTION=sqlite
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=u839269382_integrace
+#DB_USERNAME=u839269382_integrace
+#DB_PASSWORD=PwdGtech@12
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
